# Ai-monitoring-System

./: .gitignore  ADAPTIVE_BASELINE.md  ARCHITECTURE_V2.md  AUTO_HEAL_PLANNER.md  ActionVerification.cpp  ActionVerification.h  ActionVerificationTests.cpp  ActuatorServiceMain.cpp  AdaptiveBaseline.cpp  AdaptiveBaseline.h  AdaptiveSampling.cpp  AdaptiveSampling.h  AdaptiveSamplingTests.cpp  AppConfig.cpp  AppConfig.h  AutoHealPlanner.cpp  AutoHealPlanner.h  BACKGROUND_AGENT.md  BENCHMARK_LAB.md  BENCHMARK_PROOF.md  BackgroundAgent.cpp  BackgroundAgent.h  BenchmarkProof.cpp  BenchmarkProof.h  BrowserIntegrationBridge.cpp  BrowserIntegrationBridge.h  BrowserIntegrationBridgeTests.cpp  BrowserNativeHost.cpp  CMakeLists.txt  CausalChecksum.cpp  CausalChecksum.h  CausalChecksumTests.cpp  CooperativeIntegrations.cpp  CooperativeIntegrations.h  CooperativeIntegrationsTests.cpp  DATA_COLLECTION.md  DECISION_ENGINE.md  DashboardCommandController.cpp  DashboardCommandController.h  DashboardCommandControllerTests.cpp  (+143 more)
.github/workflows/: ci.yml
benchmarks/: benchmark_record_template.json  raw_run.schema.json  synthetic_example_runs.jsonl
docs/: CURRENT_STATE_AUDIT.md  DATABASE_MIGRATIONS.md  DATA_CONTRACT_V3.md  EVALUATION_FOUNDATION.md  LICENSE_REQUIRED.md  NEXT_STEPS.md  OBSERVER_EFFECT_GOVERNOR.md  PHASE1_ACCEPTANCE.md  PHASE2_ACCEPTANCE.md  PHASE3_STATUS.md  PHASE4_STATUS.md  current_state_audit.json
hard_cases/: README.md
integrations/browser/: README.md  background.js  manifest.json  native-host-manifest.json  options.html  options.js
portable/: DATA_COLLECTION.md  TRANSFER.md  config.txt  labeling.py  model_report.json  training_data_summary.py
python/: __init__.py  baselines.py  certification_runner.py  conformal_runtime.py  dataset_schema_v3.py  drift_monitor.py  episode_builder.py  evaluation_metrics.py  grouped_temporal_split.py  label_validation.py  locked_split.py  model_registry.py  ood_ensemble.py  probability_calibration.py  risk_coverage_report.py  selective_risk_certificate.py  slice_report.py  stress_lab.py  workload_lab.py
schemas/: action_outcome.schema.json  outcome_label.schema.json  proof_carrying_action.schema.json  telemetry_frame.schema.json  workload_episode.schema.json
tools/: collect_baseline.ps1  freeze_release_candidate.ps1  new_sbom.ps1  release_readiness.ps1  run_all_checks.ps1  run_locked_certification.ps1
